# unmasking-did

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  index.html
.github/workflows/: ci.yml  coverage.yml  pages.yml  preview.yml
data/: linkage_params.default.json
data/findings/: 2026-05-01-scroll-dao-safes.graph.json  2026-05-01-scroll-dao-safes.md  README.md
docs/: blog_run_spec_arbitrum_conservative_v0.md  finding-graph.md  monthly_monitoring_schema_proposal.md  phase3_monitoring_product_spec.md  run-spec-arbitrum-gov-90d.md
docs/findings/: arbitrum-governance-coordination-v0-notes.md  arbitrum-governance-coordination-v0.md
migrations/: 0001_init.sql  0002_evidence.sql  0003_safe_owners.sql  0004_did_documents.sql  0005_monthly_monitoring.sql  0006_phase3_lineage_profile.sql  0007_phase45_benchmark.sql
scripts/: cluster_sybil_features.py  evidence_audit.py  graph_diag.sql  pair_baseline_score.py  phase1_arbitrum_gov_seeds.py  phase1b_arbitrum_gov_stratified_seeds.py
src/: config.rs  graph_export.rs  ingest_common.rs  lib.rs  main.rs  phase2_arbitrum_gov.rs  serve.rs
src/alchemy/: client.rs  mod.rs  transfers.rs
src/benchmark/: mod.rs
src/did/: document.rs  mod.rs
src/ens/: mod.rs  subgraph.rs
src/eval/: ablation.rs  (+3 more)
tests/: config_arbitrum_env.rs  did.rs  dot.rs  ens.rs  eval_harness.rs  golden.rs  invariants.rs  lineage.rs  linking.rs  persistence.rs  phase3c_outputs.rs  policy_profile.rs  report.rs  safe.rs
viewer/: benchmark.html  benchmark.js  index.html  index.js  v0-narrative.html  v0-narrative.js
(+25 files in other folders)
