[package]
name = "unmasking-did"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Measuring the gap between decentralized identifiers and decentralized entities on Ethereum."
repository = "https://github.com/egpivo/unmasking-did"

[dependencies]
alloy = { version = "0.5", features = ["full"] }
ssi = "0.16"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
csv = "1.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
